Wed Oct 11 23:16:48 2000  David Helder  <dhelder@umich.edu>

	* src/scheduler.[hc]: Added, but not used yet.
	
	* src/md5.[hc]: Added
	* src/sha.[hc]: Added

	* src/gnet.h: Added md5 and sha

Wed Oct 11 22:57:18 2000  David Helder  <dhelder@umich.edu>

	* src/iochannel.[hc]: Moved functions in gnet.h here
	* src/iochannel.c ({read,write}_async): Added

	* src/pack.[hc]: Added.  Mostly finished.  Needs testing, more
	   docs.

	* src/conn.[hc]: Added.  Needs review, docs.
	* src/server.[hc]: Added.  Needs review, docs.
	
	* src/url.[hc]: Added.  Very basic, not standards compliant.
	   Needs work.
	
	* src/inetaddr.c (gnet_inetaddr_new_nonblock): Added
	* src/inetaddr.c (gnet_inetaddr_is_*): Added
	
	* src/inetaddr.c (gnet_inetaddr_autodetect_internet_interface): Added
	* src/inetaddr.c (gnet_inetaddr_get_interface_to): "
	* src/inetaddr.c (gnet_inetaddr_get_internet_interface): "
	* src/inetaddr.c (gnet_inetaddr_is_internet_domainname): "

	* src/inetaddr.c,gnet-private.c (gnet_inetaddr_list_interfaces):
	    Moved from private to inetaddr and exposed.
	
	* src/tcp.c (gnet_tcp_socket_set_tos): Added
	* src/tcp.c (gnet_tcp_socket_server_new2): Added.  This
	    will become gnet_tcp_socket_server_new() in 1.2.

Tue Oct  3 13:26:45 2000  Andrew Lanoix <alanoix@umich.edu>

	* Added: Gnet.dsp (MS VC 6.0 Project File, builds with
	  Glib 1.2)
	* Removed references to G_OS_WIN32 in examples

Mon Oct  2 00:05:33 2000  Andrew Lanoix <alanoix@umich.edu>

	* Added: gnetconfig.h.win32, config.h.win32
	* Code now compiles with both Glib 1.2, 1.3 on Win32

Mon Oct  2 11:19:12 2000  David Helder  <dhelder@umich.edu>

	* src/gnet-private.c: Remove include config.h 

Mon Oct  2 11:15:19 2000  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c: Remove include of config.h.  Already
	   in gnet-private.h.

Sun Oct  1 19:42:07 2000  David Helder  <dhelder@umich.edu>

	* src/tcp.c (gnet_tcp_socket_new_async_cb): Remove the watch